# torrent-scraping

./: .gitignore  Cargo.toml  README.md  main.rs  torrents.json.example
.cargo/: config.toml
extract/: Cargo.toml
extract/src/: main.rs
scrape/: Cargo.toml  config.toml
scrape/src/: main.rs
