[package]
name = "extract"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "extract"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
dashmap = "5.5"
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }
scraper = "0.18"
regex = "1.10"