[package]
name = "scrape"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scrape"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "charset", "http2", "macos-system-configuration"] }
serde_bencode = "0.2"
sha1 = "0.10"
url = "2.5"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
toml = "0.8"
dashmap = "6.1"
indicatif = "0.17"
bytes = "1.5"
futures = "0.3"
hex = "0.4"
rand = "0.8"
crossbeam-channel = "0.5"
urlencoding = "2.1"

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]
